fix bug panel overlap

--- a/assembl/static/css/layout/_messagelist.scss
+++ b/assembl/static/css/layout/_messagelist.scss
@@ -61,7 +61,7 @@
 
 .messageList {
   position: relative;
-  min-width: 500px;
+  min-width: 400px;
 
   .panel-body {
     top: 30px;
